fix menu items alignment to logo

--- a/portal/static/less/gil.less
+++ b/portal/static/less/gil.less
@@ -6765,7 +6765,7 @@ a:hover {
 
 .header__menu {
     float: left;
-    margin-top: 8px;
+    margin-top: 12px;
 }
 
 .header__menu a {
@@ -6801,8 +6801,11 @@ a:hover {
     }
 }
 @media (min-width:768px) {
+    .header__menu {
+        margin-top: 20px;
+    }
     .header__meta {
-        margin-top: 8px;
+        margin-top: 20px;
         display: block;
     }
 }
